<resources>
    <string name="app_name">QuizApp2</string>
    <string name="question_declaration">Let\'s begin your success test!</string>
    <string name="true_text">True</string>
    <string name="false_text">false</string>
    <string name="profile">profile</string>
    <string name="next">next</string>

    <!--Questions-->
    <string name="true_answer">The answer is correct!</string>
    <string name="false_answer">The answer is wrong!</string>
    <string name="first_question">Are you willing to change your life?</string>
    <string name="second_question">Are you risking your life?</string>
    <string name="third_question">Do you believe that your constant action can eventually bring a drastic change in your life?</string>
    <string name="previous">previous</string>
    <string name="guess_the_name">guess the name</string>
    <string name="guess">add_guess</string>
    <string name="enter_guess">enter_guess</string>

</resources>
