<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/holo_red_light"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/profile"
        android:src="@android:drawable/star_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/question_delaration_textview"
        android:text="@string/question_declaration"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:contentDescription="@string/true_text"
            android:id="@+id/true_text"
            android:text="@string/true_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:contentDescription="@string/false_text"
            android:id="@+id/false_text"
            android:text="@string/false_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:contentDescription="@string/previous"
            android:src="@android:drawable/ic_media_previous"
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:contentDescription="@string/next"
            android:src="@android:drawable/ic_media_next"
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>